--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="site-header">
-    <a href="#" class="logo"><span>CANVIX</span> STORE</a>
+    <a href="index.html" class="logo"><span class="logo-canvix">CANVIX</span> <span class="logo-store">STORE</span></a>
     <div class="search-bar">
       <input id="searchInput" type="text" placeholder="Buscar produto..." />
       <button id="btnSearch">Buscar</button>
@@ -22,7 +22,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© 2025 Canvix Store. Todos os direitos reservados.</p>
+    <div class="footer-text">© 2025 Canvix Store. Todos os direitos reservados.</div>
   </footer>
 
   <script src="script.js"></script>
